--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Plain Ol Note</string>
+    <string name="app_name">Note MVVM</string>
     <string name="action_add_sample_data">add sample data</string>
     <string name="title_activity_editor">EditorActivity</string>
     <string name="large_text">
